--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "preinstall": "npx only-allow yarn",
     "develop:backend": "yarn --cwd backend develop",
     "develop:frontend": "wait-on http://localhost:1337/admin && yarn --cwd frontend develop",
     "develop": "cross-env FORCE_COLOR=1 npm-run-all -l -p develop:*"
@@ -11,5 +12,9 @@
     "cross-env": "7.0.3",
     "npm-run-all": "4.1.5",
     "wait-on": "6.0.1"
+  },
+  "volta": {
+    "node": "16.18.0",
+    "yarn": "1.22.19"
   }
 }
