--- a/package.json
+++ b/package.json
@@ -4,17 +4,31 @@
   "version": "0.0.0",
   "scripts": {
     "preinstall": "npx only-allow yarn",
+    "postinstall": "husky install",
     "develop:backend": "yarn --cwd backend develop",
     "develop:frontend": "wait-on http://localhost:1337/admin && yarn --cwd frontend develop",
     "develop": "cross-env FORCE_COLOR=1 npm-run-all -l -p develop:*"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "commitizen": "^4.2.5",
     "cross-env": "7.0.3",
+    "cz-customizable": "^7.0.0",
+    "husky": "^8.0.1",
     "npm-run-all": "4.1.5",
     "wait-on": "6.0.1"
   },
   "volta": {
     "node": "16.18.0",
     "yarn": "1.22.19"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-config.js"
+    }
   }
 }
