feat: platform: 添加layout;支持styled-jsx;添加route-error-element;

--- a/platform/.babelrc
+++ b/platform/.babelrc
@@ -1,7 +1,4 @@
 {
-  "presets": [
-    "@babel/env",
-    "@babel/preset-react",
-    "@babel/preset-typescript"
-  ]
+  "presets": ["@babel/env", "@babel/preset-react", "@babel/preset-typescript"],
+  "plugins": [["styled-jsx/babel", { "plugins": ["styled-jsx-plugin-postcss"] }]]
 }
