--- a/platform/package.json
+++ b/platform/package.json
@@ -20,11 +20,11 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.8",
-    "@types/node": "18.11.4",
+    "@types/node": "18.11.5",
     "@types/react": "16.14.32",
     "@types/react-dom": "16.9.16",
-    "@typescript-eslint/eslint-plugin": "5.40.1",
-    "@typescript-eslint/parser": "5.40.1",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "8.2.5",
     "css-loader": "5.2.7",
@@ -42,6 +42,7 @@
     "less-loader": "7.3.0",
     "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "1.6.2",
+    "patch-package": "^6.4.7",
     "postcss": "^8.4.18",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.0.0",
@@ -57,8 +58,7 @@
     "webpack": "4.46.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.11.1",
-    "webpack-merge": "5.8.0",
-    "patch-package": "^6.4.7"
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "@alilc/lowcode-code-generator": "1.0.6",
@@ -79,7 +79,10 @@
     "ahooks": "^3.7.2",
     "antd": "4.23.6",
     "axios": "1.1.3",
+    "classnames": "^2.3.2",
     "react-router-dom": "6.4.2",
+    "styled-jsx": "^5.1.0",
+    "styled-jsx-plugin-postcss": "^4.0.1",
     "tailwindcss": "^3.2.1"
   },
   "volta": {
