--- a/platform/package.json
+++ b/platform/package.json
@@ -20,8 +20,8 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.8",
-    "@types/node": "18.11.5",
-    "@types/react": "16.14.32",
+    "@types/node": "18.11.7",
+    "@types/react": "16.14.33",
     "@types/react-dom": "16.9.16",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
@@ -41,8 +41,9 @@
     "less": "4.1.3",
     "less-loader": "7.3.0",
     "less-vars-to-js": "^1.3.0",
+    "lodash": "4.6.1",
     "mini-css-extract-plugin": "1.6.2",
-    "patch-package": "^6.4.7",
+    "patch-package": "^6.5.0",
     "postcss": "^8.4.18",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.0.0",
