--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "@strapi/plugin-i18n": "4.4.5",
     "@strapi/plugin-users-permissions": "4.4.5",
     "@strapi/strapi": "4.4.5",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "uuid": "^9.0.0"
   },
   "author": {
     "name": "A Strapi developer"
