--- a/platform/.babelrc
+++ b/platform/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["@babel/env", "@babel/preset-react", "@babel/preset-typescript"],
+  "presets": [
+    "@babel/env",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ],
+    "@babel/preset-typescript"
+  ],
   "plugins": [["styled-jsx/babel", { "plugins": ["styled-jsx-plugin-postcss"] }]]
 }
