--- a/platform/package.json
+++ b/platform/package.json
@@ -13,27 +13,28 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@alilc/lowcode-engine": "1.0.15",
+    "@alilc/lowcode-engine": "1.0.16",
     "@alilc/lowcode-engine-ext": "1.0.5",
-    "@babel/core": "7.19.6",
-    "@babel/preset-env": "7.19.4",
+    "@babel/core": "7.20.2",
+    "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.8",
-    "@types/node": "18.11.7",
-    "@types/react": "16.14.33",
-    "@types/react-dom": "16.9.16",
-    "@typescript-eslint/eslint-plugin": "5.41.0",
-    "@typescript-eslint/parser": "5.41.0",
-    "autoprefixer": "^10.4.12",
-    "babel-loader": "8.2.5",
+    "@types/node": "18.11.9",
+    "@types/react": "16.14.34",
+    "@types/react-dom": "16.9.17",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
+    "@typescript-eslint/parser": "5.42.1",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "8.3.0",
     "css-loader": "5.2.7",
-    "cssnano": "^5.1.13",
+    "cssnano": "^5.1.14",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "8.26.0",
+    "eslint": "8.27.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.5.2",
     "html-webpack-plugin": "4.5.2",
@@ -52,7 +53,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-refresh": "0.14.0",
-    "sass": "1.55.0",
+    "sass": "1.56.1",
     "sass-loader": "10.3.1",
     "style-loader": "2.0.0",
     "typescript": "4.8.4",
@@ -71,26 +72,26 @@
     "@alilc/lowcode-plugin-inject": "1.1.3",
     "@alilc/lowcode-plugin-manual": "1.0.3",
     "@alilc/lowcode-plugin-schema": "1.0.1",
-    "@alilc/lowcode-plugin-simulator-select": "1.0.0",
+    "@alilc/lowcode-plugin-simulator-select": "1.0.2",
     "@alilc/lowcode-plugin-undo-redo": "1.0.0",
     "@alilc/lowcode-plugin-zh-en": "1.0.0",
-    "@alilc/lowcode-react-renderer": "1.0.15",
+    "@alilc/lowcode-react-renderer": "1.0.16",
     "@alilc/lowcode-setter-behavior": "1.0.0",
     "@alilc/lowcode-setter-title": "1.0.2",
     "ahooks": "^3.7.2",
-    "antd": "4.23.6",
-    "axios": "^1.1.3",
+    "antd": "4.24.1",
+    "axios": "1.1.3",
     "classnames": "^2.3.2",
-    "react-router-dom": "6.4.2",
+    "react-router-dom": "6.4.3",
     "styled-jsx": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.2"
   },
   "volta": {
     "node": "14.20.1"
   },
   "resolutions": {
-    "@babel/preset-env": "7.19.4"
+    "@babel/preset-env": "7.20.2"
   },
   "browserslist": [
     "> 1%",
