--- a/platform/package.json
+++ b/platform/package.json
@@ -19,12 +19,12 @@
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.9",
     "@types/node": "18.11.9",
     "@types/react": "16.14.34",
     "@types/react-dom": "16.9.17",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "8.3.0",
     "css-loader": "5.2.7",
@@ -45,7 +45,7 @@
     "lodash": "4.6.1",
     "mini-css-extract-plugin": "1.6.2",
     "patch-package": "^6.5.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.0.0",
     "postcss-loader": "4.3.0",
@@ -78,14 +78,18 @@
     "@alilc/lowcode-react-renderer": "1.0.16",
     "@alilc/lowcode-setter-behavior": "1.0.0",
     "@alilc/lowcode-setter-title": "1.0.2",
+    "@atlaskit/tree": "^8.6.3",
     "ahooks": "^3.7.2",
-    "antd": "4.24.1",
+    "antd": "4.24.2",
     "axios": "1.1.3",
     "classnames": "^2.3.2",
+    "immer": "^9.0.16",
     "react-router-dom": "6.4.3",
     "styled-jsx": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
-    "tailwindcss": "^3.2.2"
+    "svg-sprite-loader": "^6.0.11",
+    "svgo-loader": "^3.0.3",
+    "tailwindcss": "^3.2.4"
   },
   "volta": {
     "node": "14.20.1"
