feat: 增加应用发布的版本控制功能;支持页面级多版本存储的模型设计

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.5.0",
-    "@strapi/plugin-users-permissions": "4.5.0",
-    "@strapi/strapi": "4.5.0",
+    "@strapi/plugin-i18n": "4.5.1",
+    "@strapi/plugin-users-permissions": "4.5.1",
+    "@strapi/strapi": "4.5.1",
     "lodash": "^4.17.21",
     "pg": "8.8.0",
+    "semver": "^7.3.8",
     "uuid": "^9.0.0"
   },
   "author": {
