--- a/platform/package.json
+++ b/platform/package.json
@@ -42,14 +42,13 @@
     "less": "4.1.3",
     "less-loader": "7.3.0",
     "less-vars-to-js": "^1.3.0",
-    "lodash": "4.6.1",
     "mini-css-extract-plugin": "1.6.2",
     "patch-package": "^6.5.0",
     "postcss": "^8.4.19",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.0.0",
     "postcss-loader": "4.3.0",
-    "prettier": "2.7.1",
+    "prettier": "2.8.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-refresh": "0.14.0",
@@ -63,25 +62,18 @@
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "@alilc/lowcode-code-generator": "1.0.6",
-    "@alilc/lowcode-datasource-fetch-handler": "1.1.3",
     "@alilc/lowcode-plugin-code-editor": "1.0.4",
-    "@alilc/lowcode-plugin-code-generator": "1.0.5",
     "@alilc/lowcode-plugin-components-pane": "1.0.3",
     "@alilc/lowcode-plugin-datasource-pane": "1.0.7",
     "@alilc/lowcode-plugin-inject": "1.1.3",
-    "@alilc/lowcode-plugin-manual": "1.0.3",
     "@alilc/lowcode-plugin-schema": "1.0.1",
-    "@alilc/lowcode-plugin-simulator-select": "1.0.2",
+    "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-plugin-undo-redo": "1.0.0",
-    "@alilc/lowcode-plugin-zh-en": "1.0.0",
     "@alilc/lowcode-react-renderer": "1.0.16",
-    "@alilc/lowcode-setter-behavior": "1.0.0",
-    "@alilc/lowcode-setter-title": "1.0.2",
     "@atlaskit/tree": "^8.6.3",
     "ahooks": "^3.7.2",
-    "antd": "5.0.0",
-    "axios": "1.1.3",
+    "antd": "5.0.1",
+    "axios": "1.2.0",
     "classnames": "^2.3.2",
     "immer": "^9.0.16",
     "react-router-dom": "6.4.3",
