--- a/platform/package.json
+++ b/platform/package.json
@@ -13,20 +13,21 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@alilc/lowcode-engine": "1.0.16",
+    "@alilc/lowcode-engine": "1.0.17",
     "@alilc/lowcode-engine-ext": "1.0.5",
-    "@babel/core": "7.20.2",
+    "@babel/core": "7.20.5",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.10",
     "@types/react": "16.14.34",
     "@types/react-dom": "16.9.17",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "5.45.0",
+    "@typescript-eslint/parser": "5.45.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "8.3.0",
+    "cross-env": "^7.0.3",
     "css-loader": "5.2.7",
     "cssnano": "^5.1.14",
     "dotenv-webpack": "^8.0.1",
@@ -62,21 +63,21 @@
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "@alilc/lowcode-plugin-code-editor": "1.0.4",
+    "@alilc/lowcode-plugin-code-editor": "1.0.5",
     "@alilc/lowcode-plugin-components-pane": "1.0.3",
     "@alilc/lowcode-plugin-datasource-pane": "1.0.7",
     "@alilc/lowcode-plugin-inject": "1.1.3",
     "@alilc/lowcode-plugin-schema": "1.0.2",
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
     "@alilc/lowcode-plugin-undo-redo": "1.0.0",
-    "@alilc/lowcode-react-renderer": "1.0.16",
+    "@alilc/lowcode-react-renderer": "1.0.17",
     "@atlaskit/tree": "^8.6.3",
     "ahooks": "^3.7.2",
-    "antd": "5.0.1",
+    "antd": "5.0.3",
     "axios": "1.2.0",
     "classnames": "^2.3.2",
     "immer": "^9.0.16",
-    "react-router-dom": "6.4.3",
+    "react-router-dom": "6.4.4",
     "styled-jsx": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "svg-sprite-loader": "^6.0.11",
@@ -84,10 +85,13 @@
     "tailwindcss": "^3.2.4"
   },
   "volta": {
-    "node": "14.20.1"
+    "node": "18.12.1",
+    "yarn": "1.22.19",
+    "npm": "8.19.2"
   },
   "resolutions": {
-    "@babel/preset-env": "7.20.2"
+    "@babel/preset-env": "7.20.2",
+    "fsevents": "2.3.2"
   },
   "browserslist": [
     "> 1%",
