feat: 添加docker配置;完善README;

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
-HOST=0.0.0.0
-PORT=1337
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+DATABASE_USERNAME=user
+DATABASE_NAME=lowcodeplatform
+DATABASE_PASSWORD=AYQZCm1fSYCFSQ8GTYO2Fg==
+DATABASE_PORT=5432
