--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "uuid": "a6899e25-050f-4b17-a0b6-eb59f75d51c2"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=18.12.1",
     "npm": ">=6.0.0"
   },
   "license": "MIT",
