--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "preinstall": "npx only-allow yarn",
     "postinstall": "husky install",
     "develop:backend": "yarn --cwd backend develop",
-    "develop:platform": "wait-on http://localhost:1337/admin && yarn --cwd platform develop",
+    "develop:platform": "yarn --cwd platform develop",
     "develop": "cross-env FORCE_COLOR=1 npm-run-all -l -p develop:*"
   },
   "devDependencies": {
