--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cross-env": "7.0.3",
     "cz-customizable": "^7.0.0",
     "husky": "^8.0.2",
-    "npm-run-all": "4.1.5",
-    "wait-on": "6.0.1"
+    "npm-run-all": "4.1.5"
   },
   "volta": {
     "node": "18.12.1",
