--- a/platform/nginx/nginx.template
+++ b/platform/nginx/nginx.template
@@ -91,7 +91,7 @@ http {
             try_files $uri $uri/ /designer.html;
         }
 
-        location /pagePreview {
+        location /app {
             try_files $uri $uri/ /preview.html;
         }
 
