--- a/platform/package.json
+++ b/platform/package.json
@@ -13,18 +13,18 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@alilc/lowcode-engine": "1.0.17",
-    "@alilc/lowcode-engine-ext": "1.0.5",
+    "@alilc/lowcode-engine": "^1.0.17",
+    "@alilc/lowcode-engine-ext": "^1.0.5",
     "@babel/core": "7.20.5",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-    "@types/node": "18.11.10",
+    "@types/node": "18.11.11",
     "@types/react": "16.14.34",
     "@types/react-dom": "16.9.17",
-    "@typescript-eslint/eslint-plugin": "5.45.0",
-    "@typescript-eslint/parser": "5.45.0",
+    "@typescript-eslint/eslint-plugin": "5.45.1",
+    "@typescript-eslint/parser": "5.45.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "8.3.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -64,18 +64,18 @@
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "@alilc/lowcode-plugin-code-editor": "1.0.5",
-    "@alilc/lowcode-plugin-components-pane": "1.0.3",
-    "@alilc/lowcode-plugin-datasource-pane": "1.0.7",
-    "@alilc/lowcode-plugin-inject": "1.1.3",
-    "@alilc/lowcode-plugin-schema": "1.0.2",
+    "@alilc/lowcode-plugin-code-editor": "^1.0.5",
+    "@alilc/lowcode-plugin-components-pane": "^1.0.3",
+    "@alilc/lowcode-plugin-datasource-pane": "^1.0.7",
+    "@alilc/lowcode-plugin-inject": "^1.1.3",
+    "@alilc/lowcode-plugin-schema": "^1.0.2",
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
-    "@alilc/lowcode-plugin-undo-redo": "1.0.0",
-    "@alilc/lowcode-react-renderer": "1.0.17",
+    "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
+    "@alilc/lowcode-react-renderer": "^1.0.17",
     "@atlaskit/tree": "^8.6.3",
     "ahooks": "^3.7.2",
     "antd": "5.0.3",
-    "axios": "1.2.0",
+    "axios": "1.2.1",
     "classnames": "^2.3.2",
     "immer": "^9.0.16",
     "react-router-dom": "6.4.4",
