--- a/platform/package.json
+++ b/platform/package.json
@@ -20,11 +20,11 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-    "@types/node": "18.11.11",
+    "@types/node": "18.11.13",
     "@types/react": "16.14.34",
     "@types/react-dom": "16.9.17",
-    "@typescript-eslint/eslint-plugin": "5.45.1",
-    "@typescript-eslint/parser": "5.45.1",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "8.3.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -46,18 +46,18 @@
     "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "1.6.2",
     "patch-package": "^6.5.0",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.20",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^15.0.1",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "4.3.0",
-    "prettier": "2.8.0",
+    "prettier": "2.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-refresh": "0.14.0",
-    "sass": "1.56.1",
+    "sass": "1.56.2",
     "sass-loader": "10.4.1",
     "style-loader": "2.0.0",
-    "typescript": "4.9.3",
+    "typescript": "4.9.4",
     "webpack": "4.46.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.11.1",
@@ -77,8 +77,10 @@
     "antd": "5.0.3",
     "axios": "1.2.1",
     "classnames": "^2.3.2",
+    "emittery": "0.13.1",
     "immer": "^9.0.16",
-    "react-router-dom": "6.4.4",
+    "localforage": "^1.10.0",
+    "react-router-dom": "6.4.5",
     "styled-jsx": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "svg-sprite-loader": "^6.0.11",
