--- a/platform/package.json
+++ b/platform/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.11.13",
     "@types/react": "16.14.34",
     "@types/react-dom": "16.9.17",
