--- a/platform/package.json
+++ b/platform/package.json
@@ -80,6 +80,9 @@
     "classnames": "^2.3.2",
     "immer": "^9.0.16",
     "localforage": "^1.10.0",
+    "react-monaco-editor": "0.46.0", 
+    "monaco-editor": "0.30.1",
+    "monaco-editor-webpack-plugin": "6.0.0", 
     "react-router-dom": "6.4.5",
     "styled-jsx": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
