--- a/platform/package.json
+++ b/platform/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@alilc/lowcode-engine": "^1.1.6",
     "@alilc/lowcode-engine-ext": "^1.0.5",
+    "@alilc/lowcode-types": "^1.1.6",
     "@babel/core": "7.22.1",
     "@babel/preset-env": "7.22.4",
     "@babel/preset-react": "7.22.3",
@@ -79,9 +80,9 @@
     "classnames": "^2.3.2",
     "immer": "^9.0.21",
     "localforage": "^1.10.0",
-    "react-monaco-editor": "0.46.0", 
     "monaco-editor": "0.30.1",
-    "monaco-editor-webpack-plugin": "6.0.0", 
+    "monaco-editor-webpack-plugin": "6.0.0",
+    "react-monaco-editor": "0.46.0",
     "react-router-dom": "6.11.2",
     "styled-jsx": "^5.1.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
