chore: update dependencies

--- a/platform/package.json
+++ b/platform/package.json
@@ -13,41 +13,41 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@alilc/lowcode-engine": "^1.1.6",
-    "@alilc/lowcode-engine-ext": "^1.0.5",
-    "@alilc/lowcode-types": "^1.1.6",
-    "@babel/core": "7.22.1",
-    "@babel/preset-env": "7.22.4",
-    "@babel/preset-react": "7.22.3",
-    "@babel/preset-typescript": "7.21.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-    "@types/node": "18.16.16",
-    "@types/react": "16.14.42",
-    "@types/react-dom": "16.9.19",
-    "@typescript-eslint/eslint-plugin": "5.59.8",
-    "@typescript-eslint/parser": "5.59.8",
-    "autoprefixer": "^10.4.14",
+    "@alilc/lowcode-engine": "^1.2.2",
+    "@alilc/lowcode-engine-ext": "^1.0.6",
+    "@alilc/lowcode-types": "^1.2.2",
+    "@babel/core": "7.23.3",
+    "@babel/preset-env": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
+    "@types/node": "18.18.11",
+    "@types/react": "16.14.52",
+    "@types/react-dom": "16.9.23",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "8.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "5.2.7",
     "cssnano": "^5.1.15",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "8.41.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint": "8.54.0",
+    "eslint-config-prettier": "8.10.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.5.3",
     "html-webpack-plugin": "4.5.2",
     "image-webpack-loader": "8.1.0",
-    "less": "4.1.3",
+    "less": "4.2.0",
     "less-loader": "7.3.0",
     "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "1.6.2",
     "patch-package": "^6.5.1",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
     "postcss-loader": "4.3.0",
@@ -55,40 +55,41 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-refresh": "0.14.0",
-    "sass": "1.62.1",
+    "sass": "1.69.5",
     "sass-loader": "10.4.1",
     "style-loader": "2.0.0",
     "typescript": "4.9.5",
-    "webpack": "4.46.0",
+    "webpack": "4.47.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.0",
-    "webpack-merge": "5.9.0"
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "5.10.0"
   },
   "dependencies": {
-    "@alilc/lowcode-plugin-code-editor": "^1.0.7",
-    "@alilc/lowcode-plugin-components-pane": "^2.0.2",
+    "@alilc/lowcode-plugin-code-editor": "^1.0.9",
+    "@alilc/lowcode-plugin-components-pane": "^2.0.4",
     "@alilc/lowcode-plugin-datasource-pane": "^1.0.11",
-    "@alilc/lowcode-plugin-inject": "^1.2.2",
+    "@alilc/lowcode-plugin-inject": "^1.2.3",
     "@alilc/lowcode-plugin-schema": "^1.0.5",
     "@alilc/lowcode-plugin-set-ref-prop": "^1.0.1",
-    "@alilc/lowcode-plugin-undo-redo": "^1.0.0",
-    "@alilc/lowcode-react-renderer": "^1.1.6",
-    "@atlaskit/tree": "^8.8.4",
-    "ahooks": "^3.7.7",
-    "antd": "5.5.2",
-    "axios": "1.4.0",
+    "@alilc/lowcode-plugin-undo-redo": "^1.0.1",
+    "@alilc/lowcode-react-renderer": "^1.2.2",
+    "@atlaskit/tree": "^8.8.7",
+    "ahooks": "^3.7.8",
+    "antd": "5.11.2",
+    "axios": "1.6.2",
     "classnames": "^2.3.2",
     "immer": "^9.0.21",
     "localforage": "^1.10.0",
     "monaco-editor": "0.30.1",
     "monaco-editor-webpack-plugin": "6.0.0",
     "react-monaco-editor": "0.46.0",
-    "react-router-dom": "6.11.2",
+    "react-router-dom": "6.19.0",
     "styled-jsx": "^5.1.2",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "svg-sprite-loader": "^6.0.11",
     "svgo-loader": "^3.0.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.5",
+    "zustand": "^4.4.6"
   },
   "volta": {
     "node": "18.12.1",
