--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,17 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.10.6",
-    "@strapi/plugin-users-permissions": "4.10.6",
-    "@strapi/strapi": "4.10.6",
+    "@strapi/plugin-i18n": "4.15.4",
+    "@strapi/plugin-users-permissions": "4.15.4",
+    "@strapi/strapi": "4.15.4",
     "lodash": "^4.17.21",
-    "pg": "8.11.0",
-    "semver": "^7.5.1",
-    "uuid": "^9.0.0"
+    "pg": "8.11.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
+    "semver": "^7.5.4",
+    "styled-components": "^5.2.1",
+    "uuid": "^9.0.1"
   },
   "author": {
     "name": "A Strapi developer"
