--- a/platform/Dockerfile.prod
+++ b/platform/Dockerfile.prod
@@ -1,11 +1,12 @@
 # syntax = docker/dockerfile:experimental
-FROM node:18.12.1-alpine as build
+FROM node:18-alpine as build
 WORKDIR /opt/
-COPY ./package.json ./yarn.lock ./
-ENV PATH /opt/node_modules/.bin:$PATH
+COPY package.json yarn.lock ./
+RUN yarn global add node-gyp
 RUN yarn config set network-timeout 600000 -g && yarn install
+ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
-COPY ./ .
+COPY . .
 RUN yarn build
 
 FROM nginx:alpine
